--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/microbiome-madness-logo-16x16.png">
 </head>
 <body>
+    <header>
+        Header
+    </header>
+    <main>
+        Main Content
+    </main>
+    <footer>
+        Footer
+    </footer>
     
 </body>
 </html>
