--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/microbiome-madness-logo-16x16.png">
 </head>
 <body>
+    <!-- Header-->
     <header>
         Header
     </header>
+    <!--Main Content-->
     <main>
         Main Content
     </main>
+    <!-- Footer -->
     <footer>
         Footer
     </footer>
