added styling sheet file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="180x180" href="assets/favicon/microbiome-madness-logo-180x180.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/microbiome-madness-logo-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/microbiome-madness-logo-16x16.png">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Header-->
