--- a/index.html
+++ b/index.html
@@ -14,7 +14,45 @@
 <body>
     <!-- Header-->
     <header>
-        Header
+        <div class="container">
+        	<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #333;" aria-label="Fifth navbar example">
+            	<div class="container-fluid">
+                	<a class="navbar-brand" href="#">MICROBIOME MADNESS</a>
+                	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+    	                <span class="navbar-toggler-icon"></span>
+	                </button>
+        	        <div class="collapse navbar-collapse" id="navbarsExample05" style="margin-right: 10%">
+            	        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin:auto">
+                	        <li class="nav-item">
+								<a class="navlist" href="index.html" style="color: yellow"><i class="fa fa-home"></i> HOME</a>
+	                        </li>
+    	                    <li class="nav-item">
+        	                    <a class="navlist" href="about.html">ABOUT ME</a>
+            	            </li>
+                	        <li class="nav-item dropdown">
+                    	        <a class="navlist dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">THERAPIES</a>
+                        	    <ul class="dropdown-menu">
+                            	    <li><a class="dropdown-item" href="Vagus-Nerve-Stimulation-(tVNS).html">Vagus Nerve Stimulation (tVNS)</a></li>
+                                	<li><a class="dropdown-item" href="helminth-therapy.html">Helminth Therapy</a></li>
+                            	</ul>
+	                        </li>
+    	                    <li class="nav-item">
+        	                    <a class="navlist" href="blog.html">BLOG</a>
+            	            </li>
+                	        <li class="nav-item">
+                    	        <a class="navlist" href="coaching.html">COACHING</a>
+                        	</li>
+	                        <li class="nav-item">
+    	                        <a class="navlist" href="contact.html">CONTACT</a>
+        	                </li>
+            	            <li class="nav-item">
+                            	<a class="navlist" href="login.html">LOGIN</a>
+                        	</li>
+                    	</ul>
+                	</div>
+            	</div>
+        	</nav>
+    	</div>
     </header>
     <!--Main Content-->
     <main>
