--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,49 +11,60 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/microbiome-madness-logo-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/microbiome-madness-logo-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Imported Style-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <!-- Header-->
     <header>
         <div class="container">
-        	<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #333;" aria-label="Fifth navbar example">
-            	<div class="container-fluid">
-                	<a class="navbar-brand" href="#">MICROBIOME MADNESS</a>
-                	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
-    	                <span class="navbar-toggler-icon"></span>
-	                </button>
-        	        <div class="collapse navbar-collapse" id="navbarsExample05" style="margin-right: 10%">
-            	        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin:auto">
-                	        <li class="nav-item">
-								<a class="navlist" href="index.html" style="color: yellow"><i class="fa fa-home"></i> HOME</a>
-	                        </li>
-    	                    <li class="nav-item">
-        	                    <a class="navlist" href="about.html">ABOUT ME</a>
-            	            </li>
-                	        <li class="nav-item dropdown">
-                    	        <a class="navlist dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">THERAPIES</a>
-                        	    <ul class="dropdown-menu">
-                            	    <li><a class="dropdown-item" href="Vagus-Nerve-Stimulation-(tVNS).html">Vagus Nerve Stimulation (tVNS)</a></li>
-                                	<li><a class="dropdown-item" href="helminth-therapy.html">Helminth Therapy</a></li>
-                            	</ul>
-	                        </li>
-    	                    <li class="nav-item">
-        	                    <a class="navlist" href="blog.html">BLOG</a>
-            	            </li>
-                	        <li class="nav-item">
-                    	        <a class="navlist" href="coaching.html">COACHING</a>
-                        	</li>
-	                        <li class="nav-item">
-    	                        <a class="navlist" href="contact.html">CONTACT</a>
-        	                </li>
-            	            <li class="nav-item">
-                            	<a class="navlist" href="login.html">LOGIN</a>
-                        	</li>
-                    	</ul>
-                	</div>
-            	</div>
-        	</nav>
-    	</div>
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #333;"
+                aria-label="Fifth navbar example">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">MICROBIOME MADNESS</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarsExample05" style="margin-right: 10%">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin:auto">
+                            <li class="nav-item">
+                                <a class="navlist" href="index.html" style="color: yellow"><i class="fa fa-home"></i>
+                                    HOME</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="navlist" href="">ABOUT ME</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="navlist dropdown-toggle" href="" data-bs-toggle="dropdown"
+                                    aria-expanded="false">THERAPIES</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="">Vagus Nerve Stimulation (tVNS)</a></li>
+                                    <li><a class="dropdown-item" href="">Helminth Therapy</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="navlist" href="">BLOG</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="navlist" href="">COACHING</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="navlist" href="">CONTACT</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="navlist" href="">LOGIN</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
     <!--Main Content-->
     <main>
@@ -62,6 +74,7 @@
     <footer>
         Footer
     </footer>
-    
+
 </body>
+
 </html>
