added active class for nav to show which page it is on

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin:auto">
                             <li class="nav-item">
                                 <a class="navlist" href="index.html" style="color: yellow"><i class="fa fa-home"></i>
-                                    HOME</a>
+                                    <span class="active">HOME</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="navlist" href="">ABOUT ME</a>
