added padding to the top of the page to place main content below header

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     </header>
     <!--Main Content-->
     <main>
-        Main Content
+        <div id="top-padding"></div>
+        <h1>Main Content</h1>
     </main>
     <!-- Footer -->
     <footer>
