mobile font size for slogan

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
     <!--Main Content-->
     <main>
         <div id="top-padding"></div>
-        <h1>Main Content</h1>
+        <div class="container punchline">
+            <h2 id="slogan">
+                Think outside the box. Be different.
+                <br>Question everything. You are your own healer.
+            </h2>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
