added first part of content and styling for paragraph + images

--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
                 <br>Question everything. You are your own healer.
             </h2>
         </div>
+        <div class="container intro">
+            <div class="row">
+                <div class="col" id="bio">
+                    <p>
+                        <strong>Hack Your Nervous System, Heal Your Life.</strong>
+                    </p>
+                    <p>
+                        My name is Hemal and I healed myself from Crohn's disease without following a long term strict diet & lifestyle protocol. After learning about how auto-immune disease is driven by an overproduction of inflammatory cytokines, I came across science backed interventions to reduce these inflammatory cytokines without the need to suppress the immune system. Successful small scale clinical trials have already been conducted with the methods I use, and I am excited to show you how.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="assets/images/smoothie.jpeg" alt="smoothie" id="smoothie" class="object-fit-sm-scale" style="padding: 10px 0 auto 0;">
+                </div>
+            </div>   
+        </div>
     </main>
     <!-- Footer -->
     <footer>
