Added the section about threesteps with images

--- a/index.html
+++ b/index.html
@@ -90,6 +90,82 @@
                 </div>
             </div>   
         </div>
+        <div class="container threesteps">
+            <div>
+                <h1>
+                    <span><strong>The 3 steps I followed</strong></span>
+                </h1>
+                <p>
+                    I followed this synergistic combination in order to overcome Crohn's disease.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-4" id="steps">
+                    <div class="step1div">
+                        <img src="https://static.wixstatic.com/media/e46a4c_1cb0ef2627b047ec9a6ce8b6dfebc48e~mv2.png/v1/fill/w_186,h_186,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Logo%20-%20yellow_edited.png" alt="Logo - yellow_edited.png" class="step1img">
+                    </div>
+                    <h2 class="process">
+                        <strong>Step 1.</strong>
+                    </h2>
+                    <div>
+                        <h4>
+                            <strong>Electrical
+                                <br>Transcutaneous Vagus
+                                <br>Nerve Stimulation
+                                <br>(tVNS)
+                            </strong>
+                        </h4>
+                    </div>
+                    <div>
+                        <p>
+                            Electrical tVNS got me into remission when medication or diet alone could not do. I came across this therapy after coming across clinical trials that carried out VNS for patients with IBD and Rheumatoid Arthritis. Fortunately, I discovered that there are devices that stimulate the vagus nerve non-invasively.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4" id="steps" >
+                    <img src="https://static.wixstatic.com/media/e46a4c_bc383ab28f784f73852a78a38b003043~mv2.jpeg/v1/crop/x_46,y_0,w_183,h_183/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Worm.jpeg" alt="worm.jpeg">
+                    <h2 class="process">
+                        <strong>Step 2.</strong>
+                    </h2>
+                    <div >
+                        <h4>
+                            <strong>Diet, Lifestyle,
+                                <br>and Microbiome
+                                <br>rebalancing
+                                <span id="mobile-gap"><br><br></span>
+                            </strong>
+                        </h4>
+                    </div>
+                    <div>
+                        <p>
+                            A controlled number of safe, mutualistic intestinal worms further enhanced my healing by rewiring my immune system. My immune system diverted its full  attention to attacking the intestinal worms instead of my intestines. Again, I came across this therapy after coming across clinical trials for Helminth therapy on IBD patients.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4" id="steps">
+                    <img src="https://static.wixstatic.com/media/11062b_44d9bff5aee4431e8daaa6a88bc6a805~mv2.jpg/v1/crop/x_1085,y_0,w_4343,h_4343/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Organic%20Vegetables.jpg" alt="Organic Vegetables"">
+                    <h2 class="process">
+                        <strong>Step 3.</strong>
+                    </h2>
+                    <div>
+                        <h4>
+                            <strong>Helminth
+                            <br>therapy
+                            <span id="mobile-gap"><br><br><br></span>
+                            </strong>
+                        </h4>
+                    </div>
+                    <div>
+                        <p>
+                            A healthy fibre rich diet focused on gut microbiome optimization to sustain long term remission. This part cannot be ignored. I wasn't overly strict on my diet because a combination of Step 1 and Step 2 balanced out my immune system. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div style="margin: 50px 0 100px 0;">
+                <a href="coaching.html"><button class="button coaching" type="button">COACHING</button></a>
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
