Added styling for the 3 steps section and the image of the fruit at the bottom

--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
                 <a href="coaching.html"><button class="button coaching" type="button">COACHING</button></a>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <img src="../assets/images/fruit.jpeg" alt="fruit" id="fruit" loading="lazy">
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
