--- a/index.html
+++ b/index.html
@@ -168,13 +168,36 @@
         </div>
         <div class="container">
             <div class="row">
-                <img src="../assets/images/fruit.jpeg" alt="fruit" id="fruit" loading="lazy">
+                <img src="../assets/images/fruit.jpeg" style="padding: 0" alt="fruit" id="fruit" loading="lazy">
             </div>
         </div>
     </main>
     <!-- Footer -->
-    <footer>
-        Footer
+    <footer class="py-5">
+        <div class="container e-book">
+            <h3>
+                <strong>My E-Book dives deep into the science behind my protocol. Download it below for free.</strong>
+            </h3>
+            <a class="e-book-download" target="_blank" id="e-book" href="https://drive.google.com/file/d/18H9CYGLe9WJiaxFKgBJPiGGc4jc3luwz/view?fbclid=IwAR1ZQo_jkHvUb0-EZ-nvXFyVv1XgPkWxDvqeJ_ipEjemW9SYCOBDMBmxNGg" style="margin: 50px auto 100px;">
+            <button class="button download" type="button">Download my E-Book</button>
+            </a>
+        </div>
+        <div class="container footer">
+            <div class="col-md-5 mb-3" style="margin: auto;">
+                <form>
+                    <h5>Subscribe to our newsletter</h5>
+                       <p>Monthly digest of what's new and exciting from us.</p>
+                    <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                        <label for="newsletter1" class="visually-hidden">Email address</label>
+                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                        <button class="btn btn-primary" type="button">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+            <p>&copy; Microbiome Madness. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
 </body>
