Removed inline styling for fruit image, moved to css. Added footer

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <img src="../assets/images/fruit.jpeg" style="padding: 0" alt="fruit" id="fruit" loading="lazy">
+                <img src="../assets/images/fruit.jpeg"alt="fruit" id="fruit" loading="lazy">
             </div>
         </div>
     </main>
