--- a/index.html
+++ b/index.html
@@ -198,7 +198,17 @@
             </div>
         </div>
     </footer>
-
+     <!-- Mobile Nav Javascript -->
+        <script>
+            function myFunction() {
+              var x = document.getElementById("myLinks");
+              if (x.style.display === "block") {
+                x.style.display = "none";
+              } else {
+                x.style.display = "block";
+              }
+            }
+        </script>
 </body>
 
 </html>
