--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
 <body>
     <!-- Header-->
+    
     <header>
+    <!--
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #333;"
                 aria-label="Fifth navbar example">
@@ -64,7 +66,26 @@
                     </div>
                 </div>
             </nav>
-        </div>
+        </div>-->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        HOME
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html">
+                        ABOUT ME
+                    </a>
+                </li>
+                <li>
+                    <a href="vagus-nerve.html">
+                        VAGUS NERVE THERAPY
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <!--Main Content-->
     <main>
@@ -199,7 +220,7 @@
             </div>
         </div>
     </footer>
-     <!-- Mobile Nav Javascript -->
+     <!-- Mobile Nav Javascript 
         <script>
             function myFunction() {
               var x = document.getElementById("myLinks");
@@ -210,6 +231,7 @@
               }
             }
         </script>
+        -->
 </body>
 
 </html>
