nav bar styles added

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
     <!--Imported Style-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
     <!-- Header-->
-    
+
     <header>
-    <!--
+        <!-- Original mobile banner with Javascript styling------------
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #333;"
                 aria-label="Fifth navbar example">
@@ -67,10 +68,13 @@
                 </div>
             </nav>
         </div>-->
+        <a href="index.html">
+            <h1>Microbiome Madness</h1>
+        </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="index.html">
+                    <a href="index.html" class="active">
                         HOME
                     </a>
                 </li>
@@ -103,13 +107,19 @@
                         <strong>Hack Your Nervous System, Heal Your Life.</strong>
                     </p>
                     <p>
-                        My name is Hemal and I healed myself from Crohn's disease without following a long term strict diet & lifestyle protocol. After learning about how auto-immune disease is driven by an overproduction of inflammatory cytokines, I came across science backed interventions to reduce these inflammatory cytokines without the need to suppress the immune system. Successful small scale clinical trials have already been conducted with the methods I use, and I am excited to show you how.
+                        My name is Hemal and I healed myself from Crohn's disease without following a long term strict
+                        diet & lifestyle protocol. After learning about how auto-immune disease is driven by an
+                        overproduction of inflammatory cytokines, I came across science backed interventions to reduce
+                        these inflammatory cytokines without the need to suppress the immune system. Successful small
+                        scale clinical trials have already been conducted with the methods I use, and I am excited to
+                        show you how.
                     </p>
                 </div>
                 <div class="col">
-                    <img src="assets/images/smoothie.jpeg" alt="smoothie" id="smoothie" class="object-fit-sm-scale" style="padding: 10px 0 auto 0;">
+                    <img src="assets/images/smoothie.jpeg" alt="smoothie" id="smoothie" class="object-fit-sm-scale"
+                        style="padding: 10px 0 auto 0;">
                 </div>
-            </div>   
+            </div>
         </div>
         <div class="container threesteps">
             <div>
@@ -123,7 +133,8 @@
             <div class="row">
                 <div class="col-md-4" id="steps">
                     <div class="step1div">
-                        <img src="https://static.wixstatic.com/media/e46a4c_1cb0ef2627b047ec9a6ce8b6dfebc48e~mv2.png/v1/fill/w_186,h_186,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Logo%20-%20yellow_edited.png" alt="Logo - yellow_edited.png" class="step1img">
+                        <img src="https://static.wixstatic.com/media/e46a4c_1cb0ef2627b047ec9a6ce8b6dfebc48e~mv2.png/v1/fill/w_186,h_186,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Logo%20-%20yellow_edited.png"
+                            alt="Logo - yellow_edited.png" class="step1img">
                     </div>
                     <h2 class="process">
                         <strong>Step 1.</strong>
@@ -139,16 +150,20 @@
                     </div>
                     <div>
                         <p>
-                            Electrical tVNS got me into remission when medication or diet alone could not do. I came across this therapy after coming across clinical trials that carried out VNS for patients with IBD and Rheumatoid Arthritis. Fortunately, I discovered that there are devices that stimulate the vagus nerve non-invasively.
+                            Electrical tVNS got me into remission when medication or diet alone could not do. I came
+                            across this therapy after coming across clinical trials that carried out VNS for patients
+                            with IBD and Rheumatoid Arthritis. Fortunately, I discovered that there are devices that
+                            stimulate the vagus nerve non-invasively.
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4" id="steps" >
-                    <img src="https://static.wixstatic.com/media/e46a4c_bc383ab28f784f73852a78a38b003043~mv2.jpeg/v1/crop/x_46,y_0,w_183,h_183/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Worm.jpeg" alt="worm.jpeg">
+                <div class="col-md-4" id="steps">
+                    <img src="https://static.wixstatic.com/media/e46a4c_bc383ab28f784f73852a78a38b003043~mv2.jpeg/v1/crop/x_46,y_0,w_183,h_183/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Worm.jpeg"
+                        alt="worm.jpeg">
                     <h2 class="process">
                         <strong>Step 2.</strong>
                     </h2>
-                    <div >
+                    <div>
                         <h4>
                             <strong>Diet, Lifestyle,
                                 <br>and Microbiome
@@ -159,26 +174,32 @@
                     </div>
                     <div>
                         <p>
-                            A controlled number of safe, mutualistic intestinal worms further enhanced my healing by rewiring my immune system. My immune system diverted its full  attention to attacking the intestinal worms instead of my intestines. Again, I came across this therapy after coming across clinical trials for Helminth therapy on IBD patients.
+                            A controlled number of safe, mutualistic intestinal worms further enhanced my healing by
+                            rewiring my immune system. My immune system diverted its full attention to attacking the
+                            intestinal worms instead of my intestines. Again, I came across this therapy after coming
+                            across clinical trials for Helminth therapy on IBD patients.
                         </p>
                     </div>
                 </div>
                 <div class="col-md-4" id="steps">
-                    <img src="https://static.wixstatic.com/media/11062b_44d9bff5aee4431e8daaa6a88bc6a805~mv2.jpg/v1/crop/x_1085,y_0,w_4343,h_4343/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Organic%20Vegetables.jpg" alt="Organic Vegetables"">
-                    <h2 class="process">
-                        <strong>Step 3.</strong>
+                    <img src="https://static.wixstatic.com/media/11062b_44d9bff5aee4431e8daaa6a88bc6a805~mv2.jpg/v1/crop/x_1085,y_0,w_4343,h_4343/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Organic%20Vegetables.jpg"
+                        alt="Organic Vegetables"">
+                    <h2 class=" process">
+                    <strong>Step 3.</strong>
                     </h2>
                     <div>
                         <h4>
                             <strong>Helminth
-                            <br>therapy
-                            <span id="mobile-gap"><br><br><br></span>
+                                <br>therapy
+                                <span id="mobile-gap"><br><br><br></span>
                             </strong>
                         </h4>
                     </div>
                     <div>
                         <p>
-                            A healthy fibre rich diet focused on gut microbiome optimization to sustain long term remission. This part cannot be ignored. I wasn't overly strict on my diet because a combination of Step 1 and Step 2 balanced out my immune system. 
+                            A healthy fibre rich diet focused on gut microbiome optimization to sustain long term
+                            remission. This part cannot be ignored. I wasn't overly strict on my diet because a
+                            combination of Step 1 and Step 2 balanced out my immune system.
                         </p>
                     </div>
                 </div>
@@ -189,7 +210,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <img src="../assets/images/fruit.jpeg"alt="fruit" id="fruit" loading="lazy">
+                <img src="../assets/images/fruit.jpeg" alt="fruit" id="fruit" loading="lazy">
             </div>
         </div>
     </main>
@@ -199,15 +220,17 @@
             <h3>
                 <strong>My E-Book dives deep into the science behind my protocol. Download it below for free.</strong>
             </h3>
-            <a class="e-book-download" target="_blank" id="e-book" href="https://drive.google.com/file/d/18H9CYGLe9WJiaxFKgBJPiGGc4jc3luwz/view?fbclid=IwAR1ZQo_jkHvUb0-EZ-nvXFyVv1XgPkWxDvqeJ_ipEjemW9SYCOBDMBmxNGg" style="margin: 50px auto 100px;">
-            <button class="button download" type="button">Download my E-Book</button>
+            <a class="e-book-download" target="_blank" id="e-book"
+                href="https://drive.google.com/file/d/18H9CYGLe9WJiaxFKgBJPiGGc4jc3luwz/view?fbclid=IwAR1ZQo_jkHvUb0-EZ-nvXFyVv1XgPkWxDvqeJ_ipEjemW9SYCOBDMBmxNGg"
+                style="margin: 50px auto 100px;">
+                <button class="button download" type="button">Download my E-Book</button>
             </a>
         </div>
         <div class="container footer">
             <div class="col-md-5 mb-3" style="margin: auto;">
                 <form>
                     <h5>Subscribe to our newsletter</h5>
-                       <p>Monthly digest of what's new and exciting from us.</p>
+                    <p>Monthly digest of what's new and exciting from us.</p>
                     <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                         <label for="newsletter1" class="visually-hidden">Email address</label>
                         <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
@@ -216,11 +239,11 @@
                 </form>
             </div>
             <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-            <p>&copy; Microbiome Madness. All rights reserved.</p>
+                <p>&copy; Microbiome Madness. All rights reserved.</p>
             </div>
         </div>
     </footer>
-     <!-- Mobile Nav Javascript 
+    <!-- Mobile Nav Javascript 
         <script>
             function myFunction() {
               var x = document.getElementById("myLinks");
