Add menu dropdown functionality

--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                 </div>
             </nav>
         </div>-->
-        <a href="index.html">
+        <a href="index.html" id="title">
             <h1>Microbiome Madness</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <ul id="menu">
                 <li>
