remove inline styling for image

--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
                     </p>
                 </div>
                 <div class="col">
-                    <img src="assets/images/smoothie.jpeg" alt="smoothie" id="smoothie" class="object-fit-sm-scale"
-                        style="padding: 10px 0 auto 0;">
+                    <img src="assets/images/smoothie.jpeg" alt="smoothie" id="smoothie" class="object-fit-sm-scale">
                 </div>
             </div>
         </div>
