--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-md-4" id="steps">
                     <img src="https://static.wixstatic.com/media/11062b_44d9bff5aee4431e8daaa6a88bc6a805~mv2.jpg/v1/crop/x_1085,y_0,w_4343,h_4343/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Organic%20Vegetables.jpg"
-                        alt="Organic Vegetables"">
+                        alt="Organic Vegetables">
                     <h2 class=" process">
                     <strong>Step 3.</strong>
                     </h2>
@@ -210,7 +210,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <img src="../assets/images/fruit.jpeg" alt="fruit" id="fruit" loading="lazy">
+                <img src="../assets/images/fruit.jpeg" alt="fruit" id="fruit">
             </div>
         </div>
     </main>
