--- a/index.html
+++ b/index.html
@@ -132,10 +132,8 @@
             </div>
             <div class="row">
                 <div class="col-md-4" id="steps">
-                    <div class="step1div">
-                        <img src="https://static.wixstatic.com/media/e46a4c_1cb0ef2627b047ec9a6ce8b6dfebc48e~mv2.png/v1/fill/w_186,h_186,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Logo%20-%20yellow_edited.png"
-                            alt="Logo - yellow_edited.png" class="step1img">
-                    </div>
+                    <img src="https://images.pond5.com/glowing-neon-line-heart-rate-footage-142917445_iconm.jpeg"
+                            alt="Logo - yellow_edited.png">
                     <h2 class="process">
                         <strong>Step 1.</strong>
                     </h2>
