update image to be more relatble to content

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4" id="steps">
-                    <img src="https://images.pond5.com/glowing-neon-line-heart-rate-footage-142917445_iconm.jpeg"
+                    <img src="https://cdn.icon-icons.com/icons2/2980/PNG/512/heartbeat_heart_rate_heart_medical_icon_187008.png" style="width:100%"
                             alt="Logo - yellow_edited.png">
                     <h2 class="process">
                         <strong>Step 1.</strong>
