change file path of fruit image to relative path instead of absolute

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4" id="steps">
-                    <img src="https://cdn.icon-icons.com/icons2/2980/PNG/512/heartbeat_heart_rate_heart_medical_icon_187008.png" style="width:100%"
+                    <img src="https://cdn.icon-icons.com/icons2/2980/PNG/512/heartbeat_heart_rate_heart_medical_icon_187008.png"
                             alt="Logo - yellow_edited.png">
                     <h2 class="process">
                         <strong>Step 1.</strong>
@@ -202,13 +202,13 @@
                     </div>
                 </div>
             </div>
-            <div style="margin: 50px 0 100px 0;">
+            <div id="coaching">
                 <a href="coaching.html"><button class="button coaching" type="button">COACHING</button></a>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <img src="../assets/images/fruit.jpeg" alt="fruit" id="fruit">
+                <img src="assets/images/fruit.jpeg" alt="fruit" id="fruit">
             </div>
         </div>
     </main>
