--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4" id="steps">
-                    <img src="https://cdn.icon-icons.com/icons2/2980/PNG/512/heartbeat_heart_rate_heart_medical_icon_187008.png"
+                    <img src="assets/images/heartbeat.jpeg"
                             alt="Logo - yellow_edited.png">
                     <h2 class="process">
                         <strong>Step 1.</strong>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="col-md-4" id="steps">
-                    <img src="https://static.wixstatic.com/media/e46a4c_bc383ab28f784f73852a78a38b003043~mv2.jpeg/v1/crop/x_46,y_0,w_183,h_183/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Worm.jpeg"
+                    <img src="assets/images/worm.jpeg"
                         alt="worm.jpeg">
                     <h2 class="process">
                         <strong>Step 2.</strong>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="col-md-4" id="steps">
-                    <img src="https://static.wixstatic.com/media/11062b_44d9bff5aee4431e8daaa6a88bc6a805~mv2.jpg/v1/crop/x_1085,y_0,w_4343,h_4343/fill/w_113,h_113,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Organic%20Vegetables.jpg"
+                    <img src="assets/images/vegetables.jpeg"
                         alt="Organic Vegetables">
                     <h2 class=" process">
                     <strong>Step 3.</strong>
