--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h1>Microbiome Madness</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa fa-bars" aria-hidden="true"></i></label>
         <nav>
             <ul id="menu">
                 <li>
