--- a/about.html
+++ b/about.html
@@ -21,7 +21,6 @@
 
 <body>
     <!-- Header-->
-
     <header>
         <a href="index.html" id="title">
             <h1>Microbiome Madness</h1>
@@ -50,7 +49,29 @@
     </header>
     <!--Main Content-->
     <main>
-        
+        <div class="container">
+            <div class="row">
+                <div class="col" id="about-me">
+                    <img src="https://static.wixstatic.com/media/2a1a02_16092a497c9c4a7b82b55a576c8cd704~mv2.jpg/v1/fill/w_602,h_741,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/2a1a02_16092a497c9c4a7b82b55a576c8cd704~mv2.jpg" class="object-fit-sm-scale" style="width:100%;" fetchpriority="high">
+                </div>
+                <div class="col" id="about-me">
+                    <h2>
+                        <strong>ABOUT ME</strong>
+                    </h2>
+                    <p>
+                        Hello! My name is Hemal Vasant and I am a Nutritional Advisor. Since my diagnosis, I have developed a huge passion for all things health and wellness.
+                        <br>
+                        <br>
+                        Since my Crohn's disease diagnosis in 2018, I have spent most of my free time researching into ways I can heal naturally.
+                        <br>
+                        <br>
+                        I came across some revolutionary science that is completely different to all of the noise we currently have in the health & wellness space, and I am extremely excited to show you what worked for me. I want everyone with auto-immune disease to know that there are ways to heal without having to adhere to strict dietary & lifestyle protocols. 
+                        <br>
+                        <br>
+                        I hope it can change your life, because you deserve nothing but happiness and vibrant health.
+                    </p>
+                </div>
+            </div>   
     </main>
     <!-- Footer -->
     <footer class="py-5">
