--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="row">
                 <div class="col" id="about-me">
-                    <img src="https://static.wixstatic.com/media/2a1a02_16092a497c9c4a7b82b55a576c8cd704~mv2.jpg/v1/fill/w_602,h_741,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/2a1a02_16092a497c9c4a7b82b55a576c8cd704~mv2.jpg" class="object-fit-sm-scale" style="width:100%;" fetchpriority="high">
+                    <img src="assets/images/drinking-smoothie.jpeg" class="object-fit-sm-scale" fetchpriority="high">
                 </div>
                 <div class="col" id="about-me">
                     <h2>
