remove navbar highlight for active page

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                         <strong>ABOUT ME</strong>
                     </h2>
                     <p>
-                        Hello! My name is Hemal Vasant and I am a Nutritional Advisor. Since my diagnosis, I have developed a huge passion for all things health and wellness.
+                        Hello! My name is Hemal and I am a Nutritional Advisor. Since my diagnosis, I have developed a huge passion for all things health and wellness.
                         <br>
                         <br>
                         Since my Crohn's disease diagnosis in 2018, I have spent most of my free time researching into ways I can heal naturally.
