add punchline to vagus-nerve page

--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -50,7 +50,11 @@
     </header>
     <!--Main Content-->
     <main>
-        
+        <div class="container punchline">
+            <h2 id="slogan">
+              Electrical Transcutaneous Vagus Nerve Stimulation (tVNS)
+            </h2>
+        </div>
     </main>
     <!-- Footer -->
     <footer class="py-5">
