extra container removed from about html

--- a/about.html
+++ b/about.html
@@ -59,40 +59,48 @@
                         <strong>ABOUT ME</strong>
                     </h2>
                     <p>
-                        Hello! My name is Hemal and I am a Nutritional Advisor. Since my diagnosis, I have developed a huge passion for all things health and wellness.
+                        Hello! My name is Hemal Vasant and I am a Nutritional Advisor. Since my diagnosis, I have
+                        developed a huge passion for all things health and wellness.
                         <br>
                         <br>
-                        Since my Crohn's disease diagnosis in 2018, I have spent most of my free time researching into ways I can heal naturally.
+                        Since my Crohn's disease diagnosis in 2018, I have spent most of my free time researching into
+                        ways I can heal naturally.
                         <br>
                         <br>
-                        I came across some revolutionary science that is completely different to all of the noise we currently have in the health & wellness space, and I am extremely excited to show you what worked for me. I want everyone with auto-immune disease to know that there are ways to heal without having to adhere to strict dietary & lifestyle protocols. 
+                        I came across some revolutionary science that is completely different to all of the noise we
+                        currently have in the health & wellness space, and I am extremely excited to show you what
+                        worked for me. I want everyone with auto-immune disease to know that there are ways to heal
+                        without having to adhere to strict dietary & lifestyle protocols.
                         <br>
                         <br>
                         I hope it can change your life, because you deserve nothing but happiness and vibrant health.
                     </p>
                 </div>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col" id="my-struggles">
-                        <h2>
-                            <strong>MY STRUGGLES</strong>
-                        </h2>
-                        <p>
-                            I felt like I was held hostage by these strict FAD diets. I jumped from diet to diet and whilst I acknowledge that a healthy diet is crucial for a healthy mind and body, it isn't going to save everyone from severe inflammatory diseases.
-                            <br>
-                            <br>
-                            I was determined to find a way to heal without having to be held hostage by a diet. 
-                            <br>
-                            <br>
-                            As well as a healthy fibre rich diet, I also wanted to enjoy sugar, fried food, pizza, burgers, and fries (in moderation of course) without the feeling of guilt or pain. And I knew this is only possible if I think outside the box.
-                        </p>
-                    </div>
-                    <div class="col" id="my-struggles">
-                        <img src="assets/images/fruit-salad.jpeg" alt="" class="object-fit-sm-scale" fetchpriority="high">
-                    </div>
-                </div>   
+            <div class="row">
+                <div class="col" id="my-struggles">
+                    <h2>
+                        <strong>MY STRUGGLES</strong>
+                    </h2>
+                    <p>
+                        I felt like I was held hostage by these strict FAD diets. I jumped from diet to diet and whilst
+                        I acknowledge that a healthy diet is crucial for a healthy mind and body, it isn't going to save
+                        everyone from severe inflammatory diseases.
+                        <br>
+                        <br>
+                        I was determined to find a way to heal without having to be held hostage by a diet.
+                        <br>
+                        <br>
+                        As well as a healthy fibre rich diet, I also wanted to enjoy sugar, fried food, pizza, burgers,
+                        and fries (in moderation of course) without the feeling of guilt or pain. And I knew this is
+                        only possible if I think outside the box.
+                    </p>
+                </div>
+                <div class="col" id="my-struggles">
+                    <img src="assets/images/fruit-salad.jpeg" alt="" class="object-fit-sm-scale" fetchpriority="high">
+                </div>
             </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer class="py-5">
