--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -60,7 +60,21 @@
               <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/AJH9KsMKi5M?si=0PJF-U53lgrHaZu4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
-
+        <div class="container">
+            <div class="row">
+              <div class="col" id="tVNS-image">
+                <img src="https://static.wixstatic.com/media/e46a4c_27bafb69fd1b40ed8ecaa8377492002c~mv2.webp" alt="vagus-nerve" id="vagus-nerve" class="object-fit-sm-scale"/>
+              </div>
+              <div class="col" id="tVNS">
+                <p>
+                  <strong>What is the Vagus Nerve (VN)?</strong>
+                </p>
+                <p>
+                  The VN is a long nerve that stems from the brain and connects to nearly every organ in the body. The VN sends information about what is going on in and around the body. This communication happens from the brain to the body and vice versa. Some functions regulated by the VN include your heartbeat, detoxification in the liver and kidneys, digestion and gut health, producing saliva and tears, urination, and sexual arousal. Those gut feelings, butterflies in your stomach, and deep breaths before a stressful situation is your VN controlling your emotional state.
+                </p>
+              </div>
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer class="py-5">
