adjust font sizes for #tvns section to respond to different screen sizes

--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -62,13 +62,13 @@
         </div>
         <div class="container">
             <div class="row">
-              <div class="col" id="tVNS-image">
+              <div class="col" id="tvns-image">
                 <img src="https://static.wixstatic.com/media/e46a4c_27bafb69fd1b40ed8ecaa8377492002c~mv2.webp" alt="vagus-nerve" id="vagus-nerve" class="object-fit-sm-scale"/>
               </div>
-              <div class="col" id="tVNS">
-                <p>
+              <div class="col" id="tvns">
+                <h4>
                   <strong>What is the Vagus Nerve (VN)?</strong>
-                </p>
+                </h4>
                 <p>
                   The VN is a long nerve that stems from the brain and connects to nearly every organ in the body. The VN sends information about what is going on in and around the body. This communication happens from the brain to the body and vice versa. Some functions regulated by the VN include your heartbeat, detoxification in the liver and kidneys, digestion and gut health, producing saliva and tears, urination, and sexual arousal. Those gut feelings, butterflies in your stomach, and deep breaths before a stressful situation is your VN controlling your emotional state.
                 </p>
