change font sizes on about.html to accomodate smallest screen size

--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -60,6 +60,7 @@
               <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/AJH9KsMKi5M?si=0PJF-U53lgrHaZu4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
+        <div class="div-seperator"></div>
         <div class="container">
             <div class="row">
               <div class="col" id="tvns-image">
@@ -75,6 +76,7 @@
               </div>
             </div>
         </div>
+        <div class="div-seperator"></div>
     </main>
     <!-- Footer -->
     <footer class="py-5">
