correct padding on final page across all device types

--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -52,31 +52,65 @@
     <main>
         <div class="container punchline">
             <h2 id="slogan">
-              Electrical Transcutaneous Vagus Nerve Stimulation (tVNS)
+                Electrical Transcutaneous Vagus Nerve Stimulation (tVNS)
             </h2>
         </div>
         <div class="container center">
             <div class="embed-responsive embed-responsive-16by9" id="tvns-video">
-              <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/AJH9KsMKi5M?si=0PJF-U53lgrHaZu4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" width="560" height="315"
+                    src="https://www.youtube.com/embed/AJH9KsMKi5M?si=0PJF-U53lgrHaZu4" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
         <div class="div-seperator"></div>
         <div class="container">
             <div class="row">
-              <div class="col" id="tvns-image">
-                <img src="https://static.wixstatic.com/media/e46a4c_27bafb69fd1b40ed8ecaa8377492002c~mv2.webp" alt="vagus-nerve" id="vagus-nerve" class="object-fit-sm-scale"/>
-              </div>
-              <div class="col" id="tvns">
-                <h4>
-                  <strong>What is the Vagus Nerve (VN)?</strong>
-                </h4>
-                <p>
-                  The VN is a long nerve that stems from the brain and connects to nearly every organ in the body. The VN sends information about what is going on in and around the body. This communication happens from the brain to the body and vice versa. Some functions regulated by the VN include your heartbeat, detoxification in the liver and kidneys, digestion and gut health, producing saliva and tears, urination, and sexual arousal. Those gut feelings, butterflies in your stomach, and deep breaths before a stressful situation is your VN controlling your emotional state.
-                </p>
-              </div>
+                <div class="col" id="tvns-image1">
+                    <img src="assets/images/vagus-nerve1.jpeg" alt="vagus-nerve-image1" id="vagus-nerve"
+                        class="object-fit-sm-scale" />
+                </div>
+                <div class="col" id="tvns1">
+                    <h4>
+                        <strong>What is the Vagus Nerve (VN)?</strong>
+                    </h4>
+                    <p>
+                        The VN is a long nerve that stems from the brain and connects to nearly every organ in the body.
+                        The VN sends information about what is going on in and around the body. This communication
+                        happens from the brain to the body and vice versa. Some functions regulated by the VN include
+                        your heartbeat, detoxification in the liver and kidneys, digestion and gut health, producing
+                        saliva and tears, urination, and sexual arousal. Those gut feelings, butterflies in your
+                        stomach, and deep breaths before a stressful situation is your VN controlling your emotional
+                        state.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="div-seperator"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col" id="tvns2">
+                    <h4>
+                        <strong>Inflammatory Cytokines</strong>
+                    </h4>
+                    <p>
+                        An overproduction of inflammatory cytokines such as TNF-Alpha, IL-1, and IL-6 cause chronic
+                        inflammation, leading to auto-immune disease. Biologics such as Infliximab and Humira are
+                        classed as 'TNF Inhibitors'. They block the inflammatory cytokine TNF-Alpha, leading to a
+                        suppression of the immune system. Unfortunately, this often leads to horrible and unwanted side
+                        effects.
+                        <br>
+                        <br>
+                        We need healthy levels of these cytokines because they help the immune system fight off
+                        infection.
+                    </p>
+                </div>
+                <div class="col" id="tvns-image2">
+                    <img src="assets/images/vagus-nerve2.jpeg" alt="vagus-nerve-image2" id="vagus-nerve" class="object-fit-sm-scale">
+                </div>
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer class="py-5">
