changed name in about.html

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                         <strong>ABOUT ME</strong>
                     </h2>
                     <p>
-                        Hello! My name is Hemal Vasant and I am a Nutritional Advisor. Since my diagnosis, I have
+                        Hello! My name is John Smith and I am a Nutritional Advisor. Since my diagnosis, I have
                         developed a huge passion for all things health and wellness.
                         <br>
                         <br>
