change steps id to class

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-4" id="steps">
+                <div class="col-md-4 steps">
                     <img src="assets/images/heartbeat.jpeg"
                             alt="Logo - yellow_edited.png">
                     <h2 class="process">
@@ -155,7 +155,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4" id="steps">
+                <div class="col-md-4 steps">
                     <img src="assets/images/worm.jpeg"
                         alt="worm.jpeg">
                     <h2 class="process">
@@ -179,7 +179,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4" id="steps">
+                <div class="col-md-4 steps">
                     <img src="assets/images/vegetables.jpeg"
                         alt="Organic Vegetables">
                     <h2 class=" process">
