remove button from anchor tag in footer of about me and vagus nerve therapy pages

--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -118,9 +118,9 @@
             <h3>
                 <strong>My E-Book dives deep into the science behind my protocol. Download it below for free.</strong>
             </h3>
-            <a class="e-book-download" target="_blank" id="e-book"
+            <a class="e-book-download button download" target="_blank" id="e-book"
                 href="https://drive.google.com/file/d/18H9CYGLe9WJiaxFKgBJPiGGc4jc3luwz/view?fbclid=IwAR1ZQo_jkHvUb0-EZ-nvXFyVv1XgPkWxDvqeJ_ipEjemW9SYCOBDMBmxNGg">
-                <button class="button download" type="button">Download my E-Book</button>
+                Download my E-Book
             </a>
         </div>
         <div class="container footer">
